== CHANGELOG.txt, QFeeds

== 2020-04-04, vx.x.x, pmarinov
* NEW: Rename to QFeeds
* NEW: Disable connection to GDrive

== 2018-05-30, v0.11.0, pmarinov

* bugfix: Sometimes the extension fails to open when clicking on the
  extension's icon

== 2018-02-03, v0.10.0, pmarinov

* new: Export OPML

== 2017-09-06, v0.9.0, pmarinov

* bugfix: work-around for persistent GDrive errors of "not_found"
* bugfix: suppress display of non-fatal GDrive errors

== 2017-03-27, v0.8.0, pmarinov

* bugfix: Crash in button "Cancel" of section "Rename folders"
* bugfix: At first login to GDrive app crashes
* bugfix: Display of "null" when syncing new feeds via GDrive
* bugfix: Handle case of wiped local storage

== 2017-02-22, v0.7.0, pmarinov

* NEW: Use '*' to indicate feeds with fresh content after fetching
* NEW: Sort entries in the panel for folders and feeds
* bugfix: In case of (occasioanal) two files on GDrive always use older one

== 2016-12-06, v0.6.7, pmarinov

* NEW: Action "Reload" + "Cancel"
* NEW: highlight of current feed entry
* bugfix: complete "Unsubscribe" even when returning to same folder
* bugfix: eliminate slowdown in syntax highlighting of XML of feeds

== 2016-10-02, v0.6.6, pmarinov

* NEW: Easy short cut to go to individual feed when in a folder

== 2016-09-11, v0.6.5, pmarinov

* NEW: Parse of RDF format of feeds
* NEW: Expire older entries from disk (indexedDB)
* NEW: Quick start subscription option switched to "Book Reviews -- NPR"
* bugfix: Adjust styling of tag "<blockquote" in feed entry display
* bugfix: Set max size of images in feed entry display
* bugfix: Handle pages that themselves are XML of a feed
* bugfix: Make sure all link open in a new tab ("target = _blank")

== 2016-06-16, v0.6.4, pmarinov

* bugfix: use unprefixed "window.indexedDB"

== 2016-06-12, v0.6.3, pmarinov

* NEW: Permantly display as read all entries older than 3 months
* NEW: Delete all records older than 3 montsh from GDrive remote tbl.