@@ -2,7 +2,7 @@
 "manifest_version": 2,
 
 "name": "QFeeds",
-"version": "0.13.0",
+"version": "0.14.0",
 "short_name": "qfeeds",
 "description": "Reader of RSS feeds",
 
