@@ -656,8 +656,8 @@ color: #999999; font-weight: bold; padding-top: 10px; padding-bottom: 8px;">Abou
     </div>
       <div><i>"QFeeds is a reader of RSS feeds"</i></div>
       <br/>
-      <div>version 0.11.0, beta</div>
-      <div>Copyright (c) 2016, Peter Marinov and Contributors. All rights reserved.</div>
+      <div>version 0.14.0, beta</div>
+      <div>Copyright (c) 2016-2024, Peter Marinov and Contributors. All rights reserved.</div>
       <br/>
       <div>
         <span>
@@ -679,7 +679,7 @@ color: #999999; font-weight: bold; padding-top: 10px; padding-bottom: 8px;">Abou
 The BSD License
 ...............
 
-Copyright (c) 2017, Peter Marinov and Contributors;
+Copyright (c) 2016-2024, Peter Marinov and Contributors;
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -710,7 +710,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <br/>
       <hr/>
       Join the colaborative development of QFeeds on GitHub:<br/>
-      <a href="https://github.com/pmarinov/rrss" target="_blank">https://github.com/pmarinov/rrss</a>
+      <a href="https://github.com/pmarinov/qfeeds" target="_blank">https://github.com/pmarinov/qfeeds</a>
       <br/><br/>
       For feedback, or to submit bug reports without creating a GitHub account:<br/>
       <a href="https://docs.google.com/forms/d/1IwrZ7zZKstONRd2_2ReUHkvO1aMNsO8veggNL2rUg5s/viewform?c=0&w=1"
